# RAG_SciFact

./: .gitignore  README.md  app.py  pyproject.toml
src/: utils.py
src/llm/: base.py  openai.py
src/rag/: chunking.py  reranker.py
src/rag/prompts/: system_prompt.txt  user_prompt.txt
src/rag/retrievers/: base.py  bm25.py  hybrid.py  semantic.py
