[project]
name = "rag-agent"
version = "0.1.0"
description = "RAG Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "ir-datasets>=0.5.11",
    "langchain>=1.1.3",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.3",
    "pandas>=2.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.28.0",
]


[tool.ruff]
exclude = [".venv", "venv", ".git", "data", ".eggs", "*.ipynb", "lib/"]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203", "TRY003", "D100", "D104", "D105", "D107",
  "G004", "EM101", "EM102", "Q000", "COM812", "N812",
  "PLR0913", "S101", "D417", "ANN002", "ANN003",
  "FIX002", "TD003", "F631", "ERA001", "PLR0915", "C901",
  "BLE001"
]

[tool.ruff.format]
docstring-code-format = true
quote-style = 'single'
skip-magic-trailing-comma = true

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.8",
]
